--- a/tutorial-2010/harmony/standalone/gemm/code.properties
+++ b/tutorial-2010/harmony/standalone/gemm/code.properties
@@ -15,11 +15,10 @@ echo "initializing"
 #  respective directories. If not, please make a change here. Maybe they
 #  installed in $HOME/projects/ directory?
 
-export OMEGA_P=/hivehomes/rahulp/omega
-export SUIFHOME=/hivehomes/rahulp/suifhome
-export PATH=/hivehomes/rahulp/suifhome/i386-linux/bin
-export PATH=/hivehomes/rahulp/suifhome/i386-linux/bin/:${PATH}
-export LD_LIBRARY_PATH=/hivehomes/rahulp/suifhome/i386-linux/lib
+export OMEGA_P=$HOME/omega
+export SUIFHOME=$HOME/suifhome
+export PATH=$HOME/chill/bin:${SUIFHOME}/i386-linux/bin/:${PATH}
+export LD_LIBRARY_PATH=${SUIFHOME}/i386-linux/solib:${LD_LIBRARY_PATH}
 ########################################
 
 ###################### loop names, languages
