Update multiple components to use the new config system.
This affects the harmony server, harmony client interface, standalone
code-server, and the parallel code-generation example.  This commit
also changes the default configuration file to "harmony.cfg", and
updates various documentation files to reflect these changes.

--- a/code-server/standalone/gemm/code.properties
+++ b/code-server/standalone/gemm/code.properties
@@ -46,7 +46,7 @@ chill_exec_name="./chill.v.0.1.8 "
 use_remote_hosts=1
 # if use_remote_host is set to 1, we also need to provide the following 
 #  parameters. username is your username
-username=rahulp
+#username=
 
 ###################### COMPILATION
 # what format should we compile the file into? If you are dynamically loading
@@ -63,7 +63,7 @@ output_file_suffix=so
 driver_filename=driver.c
 
 # fortran compilation (note the trailing space in the end, which is needed).
-FC_COMMAND="gfortran -O3 "
+FC_COMMAND="gfortran -m32 -O3 "
 
 # c compilation (note the trailing space in the end, which is needed).
-CC_COMMAND="gcc -O3 "   
+CC_COMMAND="gcc -m32 -O3 "   
