--- a/code-server/standalone/generic/code.properties
+++ b/code-server/standalone/generic/code.properties
@@ -46,7 +46,7 @@ chill_exec_name="./chill.v.0.1.8 "
 use_remote_hosts=0
 # if use_remote_host is set to 1, we also need to provide the following 
 #  parameters. username is your username
-username=rahulp
+#username=
 
 ###################### COMPILATION
 # what format should we compile the file into? If you are dynamically loading
