creating Philip's branch

--- a/bin/harmony.cfg
+++ b/bin/harmony.cfg
@@ -25,7 +25,8 @@ app_name_tuning=gemm
 #     Nelder Mead
 #     Random
 #     Brute Force
-search_algorithm=PRO
+#search_algorithm=PRO
+search_algorithm=Nelder Mead
 
 # ---------------------------------------------
 # Harmony/Code Server (Standalone) Shared Paths
@@ -36,11 +37,11 @@ search_algorithm=PRO
 #     None
 #     Standard (Not tested/implemented yet!)
 #     Standalone
-codegen=Standalone
+# codegen=Standalone
+codegen=None
 
 # File to store the harmony server's PID information.
-hspid_path=/hivehomes/rchen/activeharmony/code-server/standalone/hs_process_id
-
+hspid_path=/chimerahomes/phi/activeharmony.dev/code-server/standalone/hs_process_id
 # Host that will run the code server.
 codegen_conf_host=spoon
 
