--- a/example/parallel/c++_examples/example2/makefile
+++ b/example/parallel/c++_examples/example2/makefile
@@ -1,7 +1,7 @@
 all: example
 
 example: simplextest.c simplext.tcl ../../../../build/harmony.a
-	g++ -g -o example -Wall simplextest.c ../../../../build/harmony.a -lm -ldl -lnsl -ltcl -ltk -I../../../../build -w
+	g++ -g -o example -Wall simplextest.c ../../../../build/harmony.a -lm -ldl -lnsl -I../../../../build -w
 
 clean:
 	rm -f core a.out *.o example
