--- a/example/parallel/c_example/makefile
+++ b/example/parallel/c_example/makefile
@@ -1,7 +1,10 @@
 all: example
 
+DEBUG_FLAG=-g
+OPT_FLAG=-O3
+
 example: simplextest.c simplext.tcl ../../../build/harmony.a
-	gcc -g -o example -Wall simplextest.c ../../../build/harmony.a -lm -ldl -lnsl -ltcl -ltk -I../../../build -w -lstdc++
+	gcc $(OPT_FLAG) -o example -Wall simplextest.c ../../../build/harmony.a -lm -ldl -lnsl -I../../../build -w -lstdc++
 
 clean:
 	rm -f core a.out *.o example
