Brute Force Example Pass
All examples within example/sequential/brute_force_examples were tested
and produce valid output via the web interface.

--- a/bin/harmony.cfg
+++ b/bin/harmony.cfg
@@ -25,7 +25,7 @@ app_name_tuning=gemm
 #     Nelder Mead
 #     Random
 #     Brute Force
-search_algorithm=PRO
+search_algorithm=Brute Force
 
 # ---------------------------------------------
 # Harmony/Code Server (Standalone) Shared Paths
@@ -36,14 +36,14 @@ search_algorithm=PRO
 #     None
 #     Standard (Not tested/implemented yet!)
 #     Standalone
-codegen=Standalone
+codegen=None
 
 # Host that will run the code server.
 codegen_conf_host=spoon
 
 # Path where harmony will write directives to the code server.
 # (Code server should be executed with a paramater that matches this location.)
-codegen_conf_dir=/tmp/rchen-ah
+codegen_conf_dir=/tmp/codegen-tmp
 
 # Directory to archive generated code on exit for post-processing.
 code_archive_dir=/scratch0/rchen/code_archive
@@ -53,7 +53,7 @@ code_archive_dir=/scratch0/rchen/code_archive
 # ------------------------------
 
 # Comma seperated list of <str n> pairs, where n slaves will run on host str.
-codegen_slave_list=     mashie 4     , armour 2         , maxfli 4
+codegen_slave_list= mashie 4, maxfli 4
 
 # Path on slave hosts where generation files will be stored.
 codegen_slave_dir=/tmp
