Undo commit on master branch, which was intended for the "phi" branch.
Subsequent commit will re-apply these changes to the correct branch.

--- a/example/parallel/c_example/makefile
+++ b/example/parallel/c_example/makefile
@@ -1,10 +1,7 @@
 all: example
 
-DEBUG_FLAG=-g
-OPT_FLAG=-O3
-
 example: simplextest.c simplext.tcl ../../../build/harmony.a
-	gcc $(OPT_FLAG) -o example -Wall simplextest.c ../../../build/harmony.a -lm -ldl -lnsl -I../../../build -w -lstdc++
+	gcc -g -o example -Wall simplextest.c ../../../build/harmony.a -lm -ldl -lnsl -ltcl -ltk -I../../../build -w -lstdc++
 
 clean:
 	rm -f core a.out *.o example
