Modify fortran example to use new fortran interface.

--- a/example/sequential/fortran_example/makefile
+++ b/example/sequential/fortran_example/makefile
@@ -1,8 +1,8 @@
 all: example
 
 example: example.f simplext.tcl ../../../build/harmony.a
-	f77 -c example.f
-	f77 -o example example.o ../../../build/harmony.a -lstdc++
+	f77 -g -fno-underscoring -c example.f
+	f77 -g -fno-underscoring -o example example.o ../../../build/harmony.a -lstdc++
 
 clean:
 	rm -f core a.out *.o example
