--- a/example/parallel/c++_examples/makefile
+++ b/example/parallel/c++_examples/makefile
@@ -1,7 +1,7 @@
 all: example
 
 example: simplextest.c simplext.tcl ../../../build/harmony.a
-	g++ -g -o example -Wall simplextest.c ../../../build/harmony.a -lm -ldl -lnsl -ltcl -ltk -I../../../build
+	g++ -g -o example -Wall simplextest.c ../../../build/harmony.a -lm -ldl -lnsl -ltcl -I../../../build
 
 clean:
 	rm -f core a.out *.o example
