Introduce new client API for C.
Attempt at simplifying the client API.  The following examples have been
updated to use the new API:

    example/parallel/code_generation
    example/sequential/search_code_variants

TODO: Update remaining examples.  Update Fortran client interface to match.

--- a/example/parallel/c++_examples/makefile
+++ b/example/parallel/c++_examples/makefile
@@ -1,7 +1,10 @@
 all: example
 
-example: simplextest.c simplext.tcl ../../../build/harmony.a
-	g++ -g -o example -Wall simplextest.c ../../../build/harmony.a -lm -ldl -lnsl -ltcl -I../../../build
+example: simplextest.o ../../../build/harmony.a
+	g++ -g -Wall simplextest.o ../../../build/harmony.a -lm -ldl -lnsl -ltcl -I../../../build -o example
+
+simplextest.o: simplextest.c
+	g++ -g -Wall -c simplextest.c -I../../../build
 
 clean:
 	rm -f core a.out *.o example
