--- a/example/parallel/search_code_variants/makefile
+++ b/example/parallel/search_code_variants/makefile
@@ -1,7 +1,10 @@
 all: search_code_variants
 
-search_code_variants: search_code_variants.c parameter_space.tcl ../../../build/harmony.a
-	g++ -w -o search_code_variants -Wall search_code_variants.c ../../../build/harmony.a -lm -ldl -lnsl -ltcl -I../../../build
+search_code_variants: search_code_variants.o ../../../build/harmony.a
+	g++ -g -Wall search_code_variants.o ../../../build/harmony.a -lm -lnsl -ltcl -I../../../build -o search_code_variants
+
+search_code_variants.o: search_code_variants.c
+	g++ -g -Wall -c search_code_variants.c -I../../../build
 
 clean:
 	rm -f core a.out *.o search_code_variants
