--- a/example/parallel/code_generation/makefile
+++ b/example/parallel/code_generation/makefile
@@ -2,7 +2,7 @@ TO_ROOT=../../..
 
 all: pro_example
 
-pro_example: mpi_stub.c offline.tcl ../../../build/harmony.a
+pro_example: mpi_stub.c ../../../build/harmony.a
 	$(MAKE) -C $(TO_ROOT)/build harmony.a
 	mpic++ -g -O3 -o pro_example -Wall mpi_stub.c ../../../build/harmony.a -lm -ldl -lnsl -ltcl -I../../../build
 
