Move code-server configuration from Tcl to global config file.
- Remove references to code_generation_params from Tcl init files.
- Add code inside build/hserver.c to set code_generation_param.
- Refactor calls to Tcl_SetVar into set_tcl_var() helper function.

--- a/bin/harmony.cfg
+++ b/bin/harmony.cfg
@@ -25,7 +25,7 @@ app_name_tuning=gemm
 #     Nelder Mead
 #     Random
 #     Brute Force
-search_algorithm=Brute Force
+search_algorithm=Nelder Mead
 
 # ---------------------------------------------
 # Harmony/Code Server (Standalone) Shared Paths
@@ -38,12 +38,20 @@ search_algorithm=Brute Force
 #     Standalone
 codegen=None
 
-# Host that will run the code server.
-codegen_conf_host=spoon
+# Username to connect as, if using SSH-based standalone code server.
+# Defaults to the process owner, if unspecified.
+codegen_user=
 
-# Path where harmony will write directives to the code server.
+# Host that will run the code server.
+codegen_host=spoon
+
+# TCP port that code server will listen on, if using TCP-based
+# standard code server.
+codegen_port=
+
+# Path on code server where harmony server will remotely write directives.
 # (Code server should be executed with a paramater that matches this location.)
-codegen_conf_dir=/tmp/codegen-tmp
+codegen_path=/tmp/codegen-tmp
 
 # ------------------------------
 # Code Server (Standalone) Paths
