Rename harmony.a client library to libharmony.a.
Also update all harmony.a makefile references to use -lharmony instead.

--- a/example/parallel/c++_examples/example2/makefile
+++ b/example/parallel/c++_examples/example2/makefile
@@ -1,7 +1,7 @@
 all: example
 
-example: simplextest.o ../../../../build/harmony.a
-	g++ -g -Wall simplextest.o ../../../../build/harmony.a -lm -ldl -lnsl -ltcl -I../../../build -o example
+example: simplextest.o ../../../../build/libharmony.a
+	g++ -g -Wall simplextest.o -L../../../../build -lharmony -lm -ldl -lnsl -ltcl -I../../../build -o example
 
 simplextest.o: simplextest.c
 	g++ -g -Wall -c simplextest.c -I../../../../build
