--- a/example/sequential/fortran_example/makefile
+++ b/example/sequential/fortran_example/makefile
@@ -1,7 +1,7 @@
 all: example
 
-example: example.o ../../../build/harmony.a
-	f77 -g -fno-underscoring -o example example.o ../../../build/harmony.a -lstdc++
+example: example.o ../../../build/libharmony.a
+	f77 -g -fno-underscoring -o example example.o -L../../../build -lharmony -lstdc++
 
 example.o: example.f
 	f77 -g -fno-underscoring -c example.f
