--- a/example/sequential/search_code_variants/makefile
+++ b/example/sequential/search_code_variants/makefile
@@ -1,7 +1,7 @@
 all: search_code_variants
 
-search_code_variants: search_code_variants.c ../../../build/harmony.a
-	g++ -w -g -o search_code_variants -Wall search_code_variants.c ../../../build/harmony.a -lm -lnsl -I../../../build
+search_code_variants: search_code_variants.c ../../../build/libharmony.a
+	g++ -w -g -o search_code_variants -Wall search_code_variants.c -L../../../build -lharmony -lm -lnsl -I../../../build
 
 clean:
 	rm -f core a.out *.o search_code_variants
