--- a/example/WIP/h_server/makefile
+++ b/example/WIP/h_server/makefile
@@ -1,7 +1,7 @@
 all: example
 
-example: simplextest.c simplext.tcl ../../../../build/harmony.a
-	g++ -g -o example -Wall simplextest.c ../../../../build/harmony.a -lm -ldl -lnsl -ltcl -I../../../../build
+example: simplextest.c simplext.tcl ../../../../build/libharmony.a
+	g++ -g -o example -Wall simplextest.c -L../../../../build -lharmony -lm -ldl -lnsl -ltcl -I../../../../build
 
 clean:
 	rm -f core a.out *.o example
