Allow distinct configuration spaces.
Move the configuration key/value pair container behind an opaque type in
preparation for the introduction of concurrent session-based tuning.

--- a/bin/harmony.cfg
+++ b/bin/harmony.cfg
@@ -4,8 +4,7 @@
 #
 # Configuration entries are key/value pairs, specified one per line,
 # seperated by an equal sign (=).  The key and value strings are both
-# whitespace trimmed when parsed.  The key is forced to be lowercased,
-# and internal whitespace is converted to underscores (_).
+# whitespace trimmed when parsed.  The key is forced to be lowercased.
 #
 # Comments are proceeded by a hash character (#).
 
