Add hserver-launch and client-script features to Tuna.
Search working directory and PATH for hserver binary, and launch
a local instance for tuna if no HARMONY_S_PORT or HARMONY_S_HOST
is defined.

Also run client applications through env to allow for clients that
cannot be launched directly, such as scripts.

--- a/example/.gitignore
+++ b/example/.gitignore
@@ -6,5 +6,7 @@ sequential/fortran_example/example
 sequential/offline_tuning/offline_tuning
 sequential/search_code_variants/search_code_variants
 sequential/chapel/synth
-sequential/tuna/synth
-sequential/tuna/tuna
+sequential/synth/synth
+gmon.out
+unique_points.tuna.dat
+tuna*.log
