--- a/example/sequential/synth/Makefile
+++ b/example/sequential/synth/Makefile
@@ -3,14 +3,10 @@ TO_BASE=../../..
 CFLAGS=-Wall -g -I$(TO_BASE)/build
 LDFLAGS=-L$(TO_BASE)/build -lharmony
 
-all: tuna synth
-
-tuna: tuna.c
-	$(MAKE) -C $(TO_BASE)/build libharmony.a
-	$(CC) $(CFLAGS) $^ $(LDFLAGS) -o $@
+all: synth
 
 synth: synth.c
 	$(CC) $(CFLAGS) $^ -o $@
 
 clean:
-	rm -f *.o tuna synth
+	rm -f *.o synth
