--- a/example/synth/Makefile
+++ b/example/synth/Makefile
@@ -1,5 +1,3 @@
-TO_BASE=../../..
-
 CFLAGS=-Wall -g -I$(TO_BASE)/build
 LDFLAGS=-L$(TO_BASE)/build -lharmony
 
@@ -9,4 +7,4 @@ synth: synth.c
 	$(CC) $(CFLAGS) $^ -o $@
 
 clean:
-	rm -f *.o synth
+	rm -f *.o synth gmon.out tuna*.log *.tuna.dat
