Update codegen example to use new plug-in system.
This commit updates all subsystems involved with code generation to
use the new plug-in system.  This includes the code_generator server,
codegen layer, codegen-helper application, and the gemm example
client.

--- a/code-server/gemm/code.properties
+++ b/code-server/gemm/code.properties
@@ -9,16 +9,26 @@
 echo "initializing"
 
 ##################### CHiLL, OMEGA, SUIF Paths
-### These definitions probably won't change.
 # exports: indicate where the CHiLL components and libraries are.
-# Here the assumption is that CHiLL components are installed in their
-#  respective directories. If not, please make a change here. Maybe they
-#  installed in $HOME/projects/ directory?
 
-export OMEGA_P=$HOME/omega
-export SUIFHOME=$HOME/suifhome
-export PATH=$HOME/chill/bin:${SUIFHOME}/i386-linux/bin/:${PATH}
-export LD_LIBRARY_PATH=${SUIFHOME}/i386-linux/solib:${LD_LIBRARY_PATH}
+CHILLHOME=
+OMEGA_P=
+SUIFHOME=
+
+if [ -n "$CHILLHOME" ]; then
+    PATH=$CHILLHOME/bin:$PATH
+fi
+
+if [ -n "$OMEGA_P" ]; then
+    export OMEGA_P
+fi
+
+if [ -n "$SUIFHOME" ]; then
+    PATH=$SUIFHOME/i386-linux/bin/:$PATH
+    LD_LIBRARY_PATH=$SUIFHOME/i386-linux/solib:$LD_LIBRARY_PATH
+fi
+
+export PATH LD_LIBRARY_PATH
 ########################################
 
 ###################### loop names, languages
@@ -33,7 +43,7 @@ file_suffix=f
 ########################################
 
 ###################### are we using a particular CHiLL version
-use_default_chill=0
+use_default_chill=1
 # if we are not using the default CHiLL, tell me what version of CHiLL you
 #  want to use. Also - make sure you include this name in the 
 #  required_files.dat so that this executable can be copied to all the
