--- a/example/taudb/Makefile
+++ b/example/taudb/Makefile
@@ -5,8 +5,8 @@ MPICC=mpicc
 CFLAGS=-std=c99 -pedantic -Wall -Werror -g
 CPPFLAGS=-D_ISOC99_SOURCE -D_XOPEN_SOURCE=500
 
-override CFLAGS+=-I$(TO_BASE)/build
-override LDFLAGS+=-L$(TO_BASE)/build -lharmony
+override CFLAGS+=-I$(TO_BASE)/src
+override LDFLAGS+=-L$(TO_BASE)/src -lharmony
 
 TARGETS=example example_mpi
 
@@ -17,7 +17,7 @@ all: $(TARGETS)
 install: $(TARGETS)
 	@echo "Examples must be executed from source directory (for now)."
 
-example: example.c $(TO_BASE)/build/libharmony.a
+example: example.c $(TO_BASE)/src/libharmony.a
 	@if [ -x "`which $(CC) 2>&1`" ]; then                           \
 		echo "$(CC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) -o $@"; \
 		$(CC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) -o $@;        \
@@ -25,7 +25,7 @@ example: example.c $(TO_BASE)/build/libharmony.a
 		echo "Skipping build of $@: $(CC) not found.";          \
 	fi
 
-example_mpi: example_mpi.c $(TO_BASE)/build/libharmony.a
+example_mpi: example_mpi.c $(TO_BASE)/src/libharmony.a
 	@if [ -x "`which $(MPICC) 2>&1`" ]; then                           \
 		echo "$(MPICC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) -o $@"; \
 		$(MPICC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) -o $@;        \
@@ -33,8 +33,8 @@ example_mpi: example_mpi.c $(TO_BASE)/build/libharmony.a
 		echo "Skipping build of $@: $(MPICC) not found.";          \
 	fi
 
-$(TO_BASE)/build/libharmony.a:
-	$(MAKE) -C $(TO_BASE)/build libharmony.a
+$(TO_BASE)/src/libharmony.a:
+	$(MAKE) -C $(TO_BASE)/src libharmony.a
 
 clean:
 	rm -f core $(TARGETS)
