--- a/example/client_api/Makefile
+++ b/example/client_api/Makefile
@@ -7,10 +7,10 @@ FC=gfortran
 FFLAGS=-Wall -g
 CHPLC=chpl
 
-override CPPFLAGS+=-I$(TO_BASE)/build
+override CPPFLAGS+=-I$(TO_BASE)/src
 override FFLAGS+=-fno-underscoring
-override CHPLFLAGS+=-M$(TO_BASE)/build -I$(TO_BASE)/build
-override LDFLAGS+=-L$(TO_BASE)/build -lharmony
+override CHPLFLAGS+=-M$(TO_BASE)/src -I$(TO_BASE)/src
+override LDFLAGS+=-L$(TO_BASE)/src -lharmony
 
 TARGETS=example_c #example_f example_chpl
 
@@ -21,7 +21,7 @@ all: $(TARGETS)
 install: $(TARGETS)
 	@echo "Examples must be executed from source directory (for now)."
 
-example_c: example.c $(TO_BASE)/build/libharmony.a
+example_c: example.c $(TO_BASE)/src/libharmony.a
 	@if [ -x "`which $(CC) 2>&1`" ]; then                           \
 		echo "$(CC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) -o $@"; \
 		$(CC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) -o $@;        \
@@ -29,7 +29,7 @@ example_c: example.c $(TO_BASE)/build/libharmony.a
 		echo "Skipping build of $@: $(CC) not found.";          \
 	fi
 
-example_f: example.f $(TO_BASE)/build/libharmony.a
+example_f: example.f $(TO_BASE)/src/libharmony.a
 	@if [ -x "`which $(FC) 2>&1`" ]; then                  \
 		echo "$(FC) $(FFLAGS) $< $(LDFLAGS) -o $@";    \
 		$(FC) $(FFLAGS) $< $(LDFLAGS) -o $@;           \
@@ -37,7 +37,7 @@ example_f: example.f $(TO_BASE)/build/libharmony.a
 		echo "Skipping build of $@: $(FC) not found."; \
 	fi
 
-example_chpl: example.chpl $(TO_BASE)/build/libharmony.a
+example_chpl: example.chpl $(TO_BASE)/src/libharmony.a
 	@if [ -x "`which $(CHPLC) 2>&1`" ]; then                            \
 		echo "$(CHPLC) $(CHPLFLAGS) $< hclient.h $(LDFLAGS) -o $@"; \
 		$(CHPLC) $(CHPLFLAGS) $< hclient.h $(LDFLAGS) -o $@;        \
@@ -45,8 +45,8 @@ example_chpl: example.chpl $(TO_BASE)/build/libharmony.a
 		echo "Skipping build of $@: chpl not found.";               \
 	fi
 
-$(TO_BASE)/build/libharmony.a:
-	$(MAKE) -C $(TO_BASE)/build libharmony.a
+$(TO_BASE)/src/libharmony.a:
+	$(MAKE) -C $(TO_BASE)/src libharmony.a
 
 clean:
 	rm -f core $(TARGETS)
