--- a/example/code_generation/Makefile
+++ b/example/code_generation/Makefile
@@ -4,8 +4,8 @@ MPICC=mpicc
 CFLAGS=-std=c99 -pedantic -Wall -Werror -g
 CPPFLAGS=-D_ISOC99_SOURCE -D_XOPEN_SOURCE=500
 
-override CPPFLAGS+=-I$(TO_BASE)/build
-override LDFLAGS+=-L$(TO_BASE)/build -lharmony -ldl
+override CPPFLAGS+=-I$(TO_BASE)/src
+override LDFLAGS+=-L$(TO_BASE)/src -lharmony -ldl
 
 .PHONY: all install clean distclean
 
@@ -14,7 +14,7 @@ all: gemm
 install: gemm
 	@echo "Examples must be executed from source directory (for now)."
 
-gemm: gemm.c $(TO_BASE)/build/libharmony.a
+gemm: gemm.c $(TO_BASE)/src/libharmony.a
 	@if [ -x "`which $(MPICC) 2>&1`" ]; then                           \
 		echo "$(MPICC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) -o $@"; \
 		$(MPICC) $(CPPFLAGS) $(CFLAGS) $< $(LDFLAGS) -o $@;        \
@@ -22,8 +22,8 @@ gemm: gemm.c $(TO_BASE)/build/libharmony.a
 		echo "Skipping build of $@: $(MPICC) not found.";          \
 	fi
 
-$(TO_BASE)/build/libharmony.a:
-	$(MAKE) -C $(TO_BASE)/build libharmony.a
+$(TO_BASE)/src/libharmony.a:
+	$(MAKE) -C $(TO_BASE)/src libharmony.a
 
 clean:
 	rm -f core gemm
