Rename Brute Force Strategy to Exhaustive.
This commit also fixes the User's Guide source files to eliminate
Doxygen warnings.

--- a/src/harmony.cfg
+++ b/src/harmony.cfg
@@ -22,11 +22,11 @@ SERVER_PORT=1979
 CLIENT_COUNT=1
 
 # -------------------------------------
-# Brute Force Strategy Specific Section
+# Exhaustive Strategy Specific Section
 
 # Number of passes before the search is considered "converged".
 # By default, only one pass is made.
-BRUTE_PASSES=1
+PASSES=1
 
 # --------------------------------
 # Random Strategy Specific Section
