Fix RANDOM_SEED configuration variable handling.
- Remove 0 as default value written in harmony.cfg.
- Force random strategy to call srand() with time() by default.
- Document that Nelder-Mead and PRO strategies use RANDOM_SEED.

--- a/src/harmony.cfg
+++ b/src/harmony.cfg
@@ -33,7 +33,7 @@ PASSES=1
 
 # Integer passed to initialize the random number generator.
 # By default, the random seed is based on time.
-RANDOM_SEED=0
+RANDOM_SEED=
 
 # ---------------------------------------
 # Simplex-based Strategy Specific Section
