Add features to the Client API example.
These features support the illustrative examples from the
"Exploring Further" section of the User's Guide.  As a result,
the example/client_api/example_c must now be linked with -lm.

- Increase loop count.
- Inform user if client leaves tuning session voluntarily.
- Append PID to session name if not explicitly named.
- Print best point found and Euclidean distance to optimal prior to exit.

--- a/example/client_api/Makefile
+++ b/example/client_api/Makefile
@@ -10,7 +10,7 @@ CHPLC=chpl
 override CPPFLAGS+=-I$(TO_BASE)/src
 override FFLAGS+=-fno-underscoring
 override CHPLFLAGS+=-M$(TO_BASE)/src -I$(TO_BASE)/src
-override LDFLAGS+=-L$(TO_BASE)/src -lharmony
+override LDFLAGS+=-L$(TO_BASE)/src -lharmony -lm
 
 TARGETS=example_c #example_f example_chpl
 
@@ -52,3 +52,4 @@ clean:
 	rm -f core $(TARGETS)
 
 distclean: clean
+	rm -f *~
